<resources>
    <string name="app_name">MTM Mobile</string>
    <string name="for_more">Daha fazla mecra ve yayına erişim fırsatı!</string>
    <string name="todo">TODO</string>
    <string name="user_name_and_email">Kullancı adı veya E-mail</string>
    <string name="required_field">Gerekli Alan*</string>
    <string name="login">Giriş Yap</string>
    <string name="password">Şifre</string>
    <string name="visual_media">TV+</string>
    <string name="hyperlink">Bu servise abone değilsiniz,\nlütfen müşteri temsilciniz ile <a href="https://medyatakip.com.tr/iletisim.html">iletişime</a> geçiniz.</string>
    <string name="hyperlink2"><a href="">Görüntülemek için tıklayınız</a></string>
</resources>