<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/test"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/yas"
        android:contentDescription="@string/todo" />


    
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/color1"
        android:text="@string/for_more"/>

    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/color1"
        android:text="@string/user_name_and_email"/>

<!--    app:helperTextEnabled="false"-->
<!--    app:helperText="required*"-->
<!--    app:helperTextTextColor="@color/red"-->

    <TextView
        android:layout_marginEnd="20dp"
        android:visibility="invisible"
        android:id="@+id/requiredUserNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required_field"
        android:textColor="@color/red"
        android:layout_gravity="end"
        android:textSize="8sp"
        android:layout_marginTop="20dp"
        tools:ignore="SmallSp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_and_email">



        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            android:textColor="@color/color2"
            android:backgroundTint="@android:color/transparent"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginEnd="20dp"
        android:id="@+id/requiredPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required_field"
        android:textColor="@color/red"
        android:layout_gravity="end"
        android:visibility="invisible"
        android:textSize="8sp"
        android:layout_marginTop="15dp"
        tools:ignore="SmallSp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="20dp"
        android:id="@+id/passwordTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password">



        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords"
            android:maxLines="1"
            android:textColor="@color/color2"
            android:backgroundTint="@android:color/transparent"
            tools:ignore="TextFields"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="10dp"
        android:id="@+id/loginMaterialButton"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/login"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:paddingVertical="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bottom_sheet_background"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="200dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="Gündemde Öne Çıkan Haberler"/>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/leftArrowImageView"
                android:paddingVertical="7dp"
                android:paddingStart="7dp"
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/left_arrow"
                tools:ignore="RtlSymmetry" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerMaina"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="true"
                android:scrollIndicators="bottom" />

            <ImageView
                android:id="@+id/rightArrowImageView"
                android:paddingVertical="7dp"
                android:paddingEnd="7dp"
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/right_arrow"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            app:ci_drawable="@drawable/white_radius"
            app:ci_height="7dp"
            app:ci_width="7dp"/>

    </LinearLayout>

</LinearLayout>